# sustainable-community-market

./: .env.example  .gitignore  Insomnia_sustainable_community_market.yaml  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/apis/: __init__.py  address.py  auth.py  balance.py  buy.py  cancel.py  category.py  certifications.py  confirm_delivery.py  history.py  manage_address.py  manage_product.py  manage_status.py  newsletter.py  processed_products.py  product.py  product_review.py  sell.py  sell_api.py  user.py  user_api.py  user_profile.py
app/models/: __init__.py  address.py  category.py  item_transaction.py  product.py  product_certifications.py  role.py  seeder.py  sustainability_certifications.py  transaction_history.py  user.py
app/static/: swagger.json
app/templates/email/: activation.html  newsletter.html
app/utils/: decorators.py  email.py  helpers.py
app/utils/validators/: __init__.py  address.py  balance.py  base.py  buy.py  certification_verify.py  manage_status.py  product.py  profile_update.py  signup.py
instance/: database.sqlite-journal
migrations/versions/: 473febddebf5_rename_contactperson_to_contact_person.py  6829e7012caa_add_review_fields_to_item_transaction.py  73af3fb540e4_add_original_price_column_on_item_.py  a042e9993ae9_update_description_string_to_details_.py  f746a23c8085_add_product_details_on_item_transaction_.py  fa445309a086_update_nullable_product_id_in_item_.py
